codex-rs/tui/src/analytics/snapshots/codex_tui__analytics__tests__terminal_styles__analytics_dark_business_6.snap
---
source: tui/src/analytics/styles_tests.rs
expression: snapshot
---
120x42
Text:
"  Analytics  ·  Live account                                                                                            "
"  [7d]  30d  ·  Aug 27–Sep 2, 2026                                                                                      "
"                                                                                                                        "
"  1 Summary  2 Credits usage history  3 Token usage history  4 Plugins called  [5 Skills used]  6 Top chats             "
"                                                                                                                        "
"  ▎ Skills used                                                                                                         "
"  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────  "
"  54 uses                                                                                                               "
"                                                                                                                        "
"   20                                                                                                                   "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                            11          "
"                                                                                                         ▃▃▃▃▃▃▃▃▃▃     "
"   10                                        9                                                           ██████████     "
"             8                           ▄▄▄▄▄▄▄▄▄▄          8                                           ██████████     "
"         ▄▄▄▄▄▄▄▄▄▄                      ██████████      ▄▄▄▄▄▄▄▄▄▄          7                           ██████████     "
"         ██████████          6           ██████████      ██████████      ▅▅▅▅▅▅▅▅▅▅                      ██████████     "
"         ██████████      ▅▅▅▅▅▅▅▅▅▅      ██████████      ██████████      ██████████          5           ██████████     "
"         ██████████      ██████████      ██████████      ██████████      ██████████      ▆▆▆▆▆▆▆▆▆▆      ██████████     "
"         ██████████      ██████████      ██████████      ██████████      ██████████      ██████████      ██████████     "
"         ██████████      ██████████      ██████████      ██████████      ██████████      ██████████      ██████████     "
"         ██████████      ██████████      ██████████      ██████████      ██████████      ██████████      ██████████     "
"         ██████████      ██████████      ██████████      ██████████      ██████████      ██████████      ██████████     "
"    0 ────────────────────────────────────────────────────────────────────────────────────────────────────────────────  "
"                                                                                                             ▲          "
"          Aug 27          Aug 28          Aug 29          Aug 30          Aug 31           Sep 1           Sep 2        "
"                                                                                                                        "
"  ────────────────────────────────────────────────────────                                                              "
"  Sep 2 · 11 uses                                                                                                       "
"  Skill                                               Uses                                                              "
"  ● Testing                                              4                                                              "
"  ● Code review                                          3                                                              "
"  ● Planning                                             3                                                              "
"  ● Debugging                                            1                                                              "
"                                                                                                                        "
"  tab/1–6 section · z dashboard · ←/→ day · enter details                                                               "
"  r 7/30d · R refresh · esc back · q close                                                                              "
Palette (foreground|background|underline|modifiers):
0: Reset|Reset|Reset|NONE
1: Reset|Reset|Reset|BOLD
2: Rgb(165, 165, 165)|Reset|Reset|NONE
3: Rgb(99, 168, 248)|Reset|Reset|BOLD
4: Reset|Reset|Reset|DIM
5: White|Reset|Reset|BOLD
6: Green|Reset|Reset|NONE
7: Magenta|Reset|Reset|NONE
8: Cyan|Reset|Reset|NONE
9: Rgb(99, 168, 248)|Reset|Reset|BOLD | UNDERLINED
10: Rgb(230, 230, 230)|Reset|Reset|BOLD
Rows (column:palette):
0: 0:0 2:1 11:2 28:0
1: 0:0 2:3 6:0 11:2 34:0
2: 0:0
3: 0:0 2:2 79:3 96:2 107:0
4: 0:0
5: 0:0 2:3 15:0
6: 0:0 2:4 118:0
7: 0:0 2:3 9:0
8: 0:0
9: 0:0 3:2 5:0
10: 0:0
11: 0:0
12: 0:0
13: 0:0
14: 0:0
15: 0:0
16: 0:0 108:5 110:0
17: 0:0
18: 0:0 3:2 5:0 45:4 46:0
19: 0:0 13:4 14:0 61:4 62:0 105:6 115:0
20: 0:0 41:6 51:0 77:4 78:0 105:6 115:0
21: 0:0 9:6 19:0 29:4 30:0 41:6 51:0 57:6 67:0 105:7 115:0
22: 0:0 9:6 19:0 41:6 51:0 57:6 67:0 73:6 83:0 93:4 94:0 105:7 115:0
23: 0:0 9:7 19:0 25:6 35:0 41:7 51:0 57:7 67:0 73:6 83:0 89:6 99:0 105:7 115:0
24: 0:0 9:7 19:0 25:6 35:0 41:7 51:0 57:7 67:0 73:7 83:0 89:7 99:0 105:8 115:0
25: 0:0 9:8 19:0 25:7 35:0 41:7 51:0 57:8 67:0 73:7 83:0 89:8 99:0 105:8 115:0
26: 0:0 9:8 19:0 25:7 35:0 41:8 51:0 57:8 67:0 73:8 83:0 89:8 99:0 105:8 115:0
27: 0:0 9:8 19:0 25:8 35:0 41:8 51:0 57:8 67:0 73:8 83:0 89:8 99:0 105:8 115:0
28: 0:0 4:2 5:0 6:4 118:0
29: 0:0 109:3 110:0
30: 0:0 10:2 16:0 26:2 32:0 42:2 48:0 58:2 64:0 74:2 80:0 91:2 96:0 107:9 112:0
31: 0:0
32: 0:0 2:4 58:0
33: 0:0 2:1 7:3 17:0
34: 0:0 2:1 7:0 54:1 58:0
35: 0:0 2:8 4:0
36: 0:0 2:7 4:0
37: 0:0 2:6 4:0
38: 0:0
39: 0:0
40: 0:0 2:10 9:2 20:10 21:2 34:10 37:2 44:10 49:2 118:0
41: 0:0 2:10 3:2 12:10 13:2 24:10 27:2 35:10 36:2 118:0
