codex-rs/tui/src/analytics/snapshots/codex_tui__analytics__tests__terminal_styles__analytics_dark_consumer_4.snap
---
source: tui/src/analytics/styles_tests.rs
expression: snapshot
---
120x42
Text:
"  Analytics  ·  Live account                                                                                            "
"                                                                                                                        "
"                                                                                                                        "
"  1 Summary  2 Total usage history  3 Messages  4 Plugins called  5 Skills used  [6 Top chats]                          "
"                                                                                                                        "
"  ▎ Top chats                                                                                                           "
"  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────  "
"  No history has been reported.                                                                                         "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"  tab/1–6 section · s sort · z dashboard · ↑/↓ row · enter details                                                      "
"  R refresh · esc back · q close                                                                                        "
Palette (foreground|background|underline|modifiers):
0: Reset|Reset|Reset|NONE
1: Reset|Reset|Reset|BOLD
2: Rgb(165, 165, 165)|Reset|Reset|NONE
3: Cyan|Reset|Reset|BOLD
4: Reset|Reset|Reset|DIM
5: White|Reset|Reset|BOLD
Rows (column:palette):
0: 0:0 2:1 11:2 28:0
1: 0:0
2: 0:0
3: 0:0 2:2 81:3 94:0
4: 0:0
5: 0:0 2:3 13:0
6: 0:0 2:4 118:0
7: 0:0
8: 0:0
9: 0:0
10: 0:0
11: 0:0
12: 0:0
13: 0:0
14: 0:0
15: 0:0
16: 0:0
17: 0:0
18: 0:0
19: 0:0
20: 0:0
21: 0:0
22: 0:0
23: 0:0
24: 0:0
25: 0:0
26: 0:0
27: 0:0
28: 0:0
29: 0:0
30: 0:0
31: 0:0
32: 0:0
33: 0:0
34: 0:0
35: 0:0
36: 0:0
37: 0:0
38: 0:0
39: 0:0
40: 0:0 2:5 9:2 20:5 21:2 29:5 30:2 43:5 46:2 53:5 58:2 118:0
41: 0:0 2:5 3:2 14:5 17:2 25:5 26:2 118:0
